--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 ]
 
 [project]
-name="python-resume"
+name="markdown-render"
 version="1.0"
 dependencies = [
     "markdown",
@@ -14,5 +14,5 @@ dependencies = [
 ]
 
 [project.scripts]
-draw-resume = "resume.main:main"
+mdr = "mdr.main:main"
 
